<resources>
    <string name="app_name">Шесть дней теха</string>
    <string name="game_name"><u>Шесть дней теха</u></string>
    <string name="company_name">MrAbragadabra and MIKKUT</string>
    <string name="presents_text">Presents</string>
    <string name="start_game">Начать игру</string>
    <string name="exit_game">Закрыть игру</string>
    <string name="disclaimer_text">Данная новелла является исключительно плодом воображения двух заигравшихся людей. Каждый персонаж не имеет ничего общего с реальностью (даже если вам очень хочется). Всё что происходит в игре, никогда не происходило в реальной жизни и возможно не произойдет (не надейтесь). В самой же игре нет никакой либо пропаганды или чего либо другого запрещенного, только учёба и только знания! При разработке не пострадало ни одного кота, кошки, лягушки, жабы. Приятной вам игры!</string>
    <string name="agree_text">Я согласен</string>
    <string name="disagree_text">Я не согласен</string>
    <string name="next_text">Далее ></string>
    <string name="day1">День 1</string>
    <string name="day2">День 2</string>
    <string name="day3">День 3</string>
    <string name="day4">День 4</string>
    <string name="day5">День 5</string>
    <string name="day6">День 6</string>

    <string name="monday">Понедельник</string>
    <string name="tuesday">Вторник</string>
    <string name="wednesday">Среда</string>
    <string name="thursday">Четвёрг</string>
    <string name="friday">Пятница</string>
    <string name="saturday">Суббота</string>


    <!--  ВЫБОР СОБЫТИЙ 1  -->
    <string name="fold">Сложить куртку</string>
    <string name="pass">Ждать очереди</string>

    <!--  ВЫБОР СОБЫТИЙ 2  -->
    <string name="takefood">Принять</string>
    <string name="passfood">Отказаться</string>

    <!--  ВЫБОР СОБЫТИЙ 3  -->
    <string name="make_peace">Успокоить их</string>
    <string name="walk_past">Идти на пару</string>

    <!--  ВЫБОР СОБЫТИЙ 4  -->
    <string name="baget">Багет</string>
    <string name="sosisa">Сосиса</string>

    <!--  ВЫБОР СОБЫТИЙ 5  -->
    <string name="openWindow">Открыть окно</string>
    <string name="closeWindow">Не открывать окно</string>

    <string name="menuPauseHeader"><u>Пауза</u></string>
    <string name="menuPauseContinueButton">Продолжить</string>
    <string name="menuPauseSaveButton">Сохранить</string>

    <!--  Титры  -->
    <string name="titres"><u>Шесть Дней Теха</u>\n\nГлавные герои:\nСтепанида\nДыров\nЕвлампий\nДушня\nЛососева\nПоликарбонат\nоладушкин\nЕвгей\nКастрюлева\n\nРежиссёр:\nMrAbragadabra,\nMIKKUT\n\nОператор:\nMrAbragadabra,\nMIKKUT\n\nХудожник-декоратор:\nMrAbragadabra,\nMIKKUT\n\nСпециалист по спецэффектам:\nMrAbragadabra,\nMIKKUT\n\nСценарист:\nMrAbragadabra,\nMIKKUT\n\nГлавный программист:\nMrAbragadabra,\nMIKKUT\n\nГлавный спонсор:\n<u>Кириешки</u>\n\nКОНЕЦ!</string>

</resources>