<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/disclaimer_bg">

    <!--  Текстовый блок с текстом дисклеймера  -->
    <TextView
        android:id="@+id/disclaimer_text"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/mega_round_text_disclaimer"
        android:fontFamily="@font/ubuntu_bold"
        android:padding="10dp"
        android:text="@string/disclaimer_text"
        android:textColor="#2B2B2B"
        android:textSize="30sp" />

    <!--  LinearLayout с кнопками  -->
    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/disclaimer_text"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">

        <!--    Кнопка "Я согласен"    -->
        <Button
            android:id="@+id/agree_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="#BFFFC5C5"
            android:hint="@string/agree_text"
            android:onClick="startNewGame"
            android:fontFamily="@font/ubuntu_bold"
            android:textColor="@drawable/button_color"
            android:textColorHint="#3D3131"
            android:textSize="25sp"
            app:cornerRadius="14dp" />

        <!--    Кнопка "Я не согласен"    -->
        <Button
            android:id="@+id/disagree_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="#BFFFC5C5"
            android:hint="@string/disagree_text"
            android:onClick="openMainMenu"
            android:fontFamily="@font/ubuntu_bold"
            android:textColor="@drawable/button_color"
            android:textColorHint="#3D3131"
            android:textSize="25sp"
            app:cornerRadius="14dp" />

    </LinearLayout>

</RelativeLayout>