<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/first_day_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bedroom">

    <!--  Изображение паузы  -->
    <ImageView
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:onClick="openPauseMenu"
        android:src="@drawable/pause" />

    <TextView
        android:id="@+id/first_day_text"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/mega_round_text"
        android:fontFamily="@font/ubuntu_bold"
        android:onClick="skipAnimation"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <!--   Кнопка 1     -->
    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_above="@id/first_day_text"
        android:layout_alignEnd="@id/first_day_text"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#ADFFC5C5"
        android:enabled="false"
        android:fontFamily="@font/ubuntu_bold"
        android:hint="@string/next_text"
        android:onClick="nextPhrase"
        android:textColor="@drawable/button_color"
        android:textColorHint="#000000"
        android:textSize="25sp"
        android:visibility="invisible"
        app:cornerRadius="14dp" />

    <!--   Кнопка 2     -->
    <Button
        android:id="@+id/next_button_2"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_above="@id/first_day_text"
        android:layout_alignEnd="@id/first_day_text"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#ADFFC5C5"
        android:enabled="false"
        android:fontFamily="@font/ubuntu_bold"
        android:hint="@string/next_text"
        android:onClick="nextPhrase_2"
        android:textColor="@drawable/button_color"
        android:textColorHint="#000000"
        android:textSize="25sp"
        android:visibility="invisible"
        app:cornerRadius="14dp" />

    <Button
        android:id="@+id/next_button_3"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_above="@id/first_day_text"
        android:layout_alignEnd="@id/first_day_text"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#ADFFC5C5"
        android:enabled="false"
        android:fontFamily="@font/ubuntu_bold"
        android:hint="@string/next_text"
        android:onClick="nextPhrase_3"
        android:textColor="@drawable/button_color"
        android:textColorHint="#000000"
        android:textSize="25sp"
        android:visibility="invisible"
        app:cornerRadius="14dp" />

    <Button
        android:id="@+id/next_button_4"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_above="@id/first_day_text"
        android:layout_alignEnd="@id/first_day_text"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#ADFFC5C5"
        android:enabled="false"
        android:fontFamily="@font/ubuntu_bold"
        android:hint="@string/next_text"
        android:onClick="nextPhrase_4"
        android:textColor="@drawable/button_color"
        android:textColorHint="#000000"
        android:textSize="25sp"
        android:visibility="invisible"
        app:cornerRadius="14dp" />

    <Button
        android:id="@+id/next_button_5"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_above="@id/first_day_text"
        android:layout_alignEnd="@id/first_day_text"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#ADFFC5C5"
        android:enabled="false"
        android:fontFamily="@font/ubuntu_bold"
        android:hint="@string/next_text"
        android:onClick="nextPhrase_5"
        android:textColor="@drawable/button_color"
        android:textColorHint="#000000"
        android:textSize="25sp"
        android:visibility="invisible"
        app:cornerRadius="14dp" />

    <Button
        android:id="@+id/next_button_6"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_above="@id/first_day_text"
        android:layout_alignEnd="@id/first_day_text"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#ADFFC5C5"
        android:enabled="false"
        android:fontFamily="@font/ubuntu_bold"
        android:hint="@string/next_text"
        android:onClick="nextPhrase_6"
        android:textColor="@drawable/button_color"
        android:textColorHint="#000000"
        android:textSize="25sp"
        android:visibility="invisible"
        app:cornerRadius="14dp" />

    <Button
        android:id="@+id/next_button_7"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_above="@id/first_day_text"
        android:layout_alignEnd="@id/first_day_text"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#ADFFC5C5"
        android:enabled="false"
        android:fontFamily="@font/ubuntu_bold"
        android:hint="@string/next_text"
        android:onClick="nextPhrase_7"
        android:textColor="@drawable/button_color"
        android:textColorHint="#000000"
        android:textSize="25sp"
        android:visibility="invisible"
        app:cornerRadius="14dp" />

    <Button
        android:id="@+id/next_button_8"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_above="@id/first_day_text"
        android:layout_alignEnd="@id/first_day_text"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#ADFFC5C5"
        android:enabled="false"
        android:fontFamily="@font/ubuntu_bold"
        android:hint="@string/next_text"
        android:onClick="nextPhrase_8"
        android:textColor="@drawable/button_color"
        android:textColorHint="#000000"
        android:textSize="25sp"
        android:visibility="invisible"
        app:cornerRadius="14dp" />

    <Button
        android:id="@+id/next_button_9"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_above="@id/first_day_text"
        android:layout_alignEnd="@id/first_day_text"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#ADFFC5C5"
        android:enabled="false"
        android:fontFamily="@font/ubuntu_bold"
        android:hint="@string/next_text"
        android:onClick="nextPhrase_9"
        android:textColor="@drawable/button_color"
        android:textColorHint="#000000"
        android:textSize="25sp"
        android:visibility="invisible"
        app:cornerRadius="14dp" />

    <Button
        android:id="@+id/next_button_10"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_above="@id/first_day_text"
        android:layout_alignEnd="@id/first_day_text"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#ADFFC5C5"
        android:enabled="false"
        android:fontFamily="@font/ubuntu_bold"
        android:hint="@string/next_text"
        android:onClick="nextPhrase_10"
        android:textColor="@drawable/button_color"
        android:textColorHint="#000000"
        android:textSize="25sp"
        android:visibility="invisible"
        app:cornerRadius="14dp" />

    <Button
        android:id="@+id/next_button_11"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_above="@id/first_day_text"
        android:layout_alignEnd="@id/first_day_text"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#ADFFC5C5"
        android:enabled="false"
        android:fontFamily="@font/ubuntu_bold"
        android:hint="@string/next_text"
        android:onClick="nextPhrase_11"
        android:textColor="@drawable/button_color"
        android:textColorHint="#000000"
        android:textSize="25sp"
        android:visibility="invisible"
        app:cornerRadius="14dp" />

    <Button
        android:id="@+id/next_button_12"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_above="@id/first_day_text"
        android:layout_alignEnd="@id/first_day_text"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#ADFFC5C5"
        android:enabled="false"
        android:fontFamily="@font/ubuntu_bold"
        android:hint="@string/next_text"
        android:onClick="nextPhrase_12"
        android:textColor="@drawable/button_color"
        android:textColorHint="#000000"
        android:textSize="25sp"
        android:visibility="invisible"
        app:cornerRadius="14dp" />

    <Button
        android:id="@+id/next_button_13"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_above="@id/first_day_text"
        android:layout_alignEnd="@id/first_day_text"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#ADFFC5C5"
        android:enabled="false"
        android:fontFamily="@font/ubuntu_bold"
        android:hint="@string/next_text"
        android:onClick="nextPhrase_13"
        android:textColor="@drawable/button_color"
        android:textColorHint="#000000"
        android:textSize="25sp"
        android:visibility="invisible"
        app:cornerRadius="14dp" />

    <Button
        android:id="@+id/next_button_14"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_above="@id/first_day_text"
        android:layout_alignEnd="@id/first_day_text"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#ADFFC5C5"
        android:enabled="false"
        android:fontFamily="@font/ubuntu_bold"
        android:hint="@string/next_text"
        android:onClick="nextPhrase_14"
        android:textColor="@drawable/button_color"
        android:textColorHint="#000000"
        android:textSize="25sp"
        android:visibility="invisible"
        app:cornerRadius="14dp" />

    <Button
        android:id="@+id/next_button_15"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_above="@id/first_day_text"
        android:layout_alignEnd="@id/first_day_text"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#ADFFC5C5"
        android:enabled="false"
        android:fontFamily="@font/ubuntu_bold"
        android:hint="@string/next_text"
        android:onClick="nextPhrase_15"
        android:textColor="@drawable/button_color"
        android:textColorHint="#000000"
        android:textSize="25sp"
        android:visibility="invisible"
        app:cornerRadius="14dp" />

    <Button
        android:id="@+id/next_button_16"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_above="@id/first_day_text"
        android:layout_alignEnd="@id/first_day_text"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#ADFFC5C5"
        android:enabled="false"
        android:fontFamily="@font/ubuntu_bold"
        android:hint="@string/next_text"
        android:onClick="nextPhrase_16"
        android:textColor="@drawable/button_color"
        android:textColorHint="#000000"
        android:textSize="25sp"
        android:visibility="invisible"
        app:cornerRadius="14dp" />

    <Button
        android:id="@+id/next_button_17"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_above="@id/first_day_text"
        android:layout_alignEnd="@id/first_day_text"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#ADFFC5C5"
        android:enabled="false"
        android:fontFamily="@font/ubuntu_bold"
        android:hint="@string/next_text"
        android:onClick="nextPhrase_17"
        android:textColor="@drawable/button_color"
        android:textColorHint="#000000"
        android:textSize="25sp"
        android:visibility="invisible"
        app:cornerRadius="14dp" />

    <LinearLayout
        android:id="@+id/choice_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/first_day_text"
        android:layout_alignStart="@id/first_day_text"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/choice_button_1"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="#ADFFC5C5"
            android:fontFamily="@font/ubuntu_bold"
            android:hint="@string/pass"

            android:onClick="passJacket"
            android:textColor="@drawable/button_color"
            android:textColorHint="#000000"
            android:textSize="25sp"
            android:visibility="invisible"

            app:cornerRadius="14dp" />

        <Button
            android:id="@+id/choice_button_2"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="#ADFFC5C5"

            android:fontFamily="@font/ubuntu_bold"
            android:hint="@string/fold"
            android:onClick="takeJacket"
            android:textColor="@drawable/button_color"
            android:textColorHint="#000000"
            android:textSize="25sp"
            android:visibility="invisible"

            app:cornerRadius="14dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/choice_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/first_day_text"
        android:layout_alignStart="@id/first_day_text"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/choice_button_3"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="#ADFFC5C5"
            android:fontFamily="@font/ubuntu_bold"
            android:hint="@string/passfood"

            android:onClick="passFood"
            android:textColor="@drawable/button_color"
            android:textColorHint="#000000"
            android:textSize="25sp"
            android:visibility="invisible"

            app:cornerRadius="14dp" />

        <Button
            android:id="@+id/choice_button_4"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="#ADFFC5C5"

            android:fontFamily="@font/ubuntu_bold"
            android:hint="@string/takefood"
            android:onClick="takeFood"
            android:textColor="@drawable/button_color"
            android:textColorHint="#000000"
            android:textSize="25sp"
            android:visibility="invisible"

            app:cornerRadius="14dp" />
    </LinearLayout>

    <!--  Фон для паузы  -->
    <LinearLayout
        android:id="@+id/pause_menu_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#BFFFFFFF"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:visibility="invisible">

    </LinearLayout>

    <!--  Меню паузы  -->
    <LinearLayout
        android:id="@+id/pause_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="360dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/rounded_menu_pause"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:padding="15dp"
        android:visibility="invisible">

        <TextView
            android:id="@+id/pause_menu_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="center"
            android:text="@string/menuPauseHeader"
            android:textSize="30sp" />

        <Button
            android:id="@+id/pause_menu_continue"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="#80FFFFFF"
            android:enabled="false"
            android:fontFamily="@font/ubuntu_bold"
            android:hint="@string/menuPauseContinueButton"
            android:onClick="closePause"
            android:textColorHint="#393939"
            android:textSize="25sp"
            app:cornerRadius="14dp" />

        <Button
            android:id="@+id/pause_menu_save"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="#80FFFFFF"
            android:enabled="false"
            android:fontFamily="@font/ubuntu_bold"
            android:hint="@string/menuPauseSaveButton"
            android:onClick="saveGame"
            android:textColorHint="#393939"
            android:textSize="25sp"
            app:cornerRadius="14dp" />
    </LinearLayout>

</RelativeLayout>